[package]
name = "graal-bindgen-macros"
version = "0.1.0"
authors = ["chop0 <chop@quenda.net>"]
edition = "2018"
description = "Macros for graal-bindgen"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
