[package]
name = "polyglot_macro"
version = "0.1.0"
authors = ["chop0 <chop@quenda.net>"]
edition = "2018"


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
